# Project-Moonlight-Engine

./: .final_verify.txt  .gitignore  .sanity.txt  BACKLOG.md  Problems.md  Project Architecture & Engineering Standards.md  ProjectMoonlightEngine.spec  README.md  ROADMAP.md  build_game_exe.bat  create_shortcuts.bat  create_shortcuts.ps1  launch_game_window.bat  pyproject.toml  run_game.bat  run_game.py
.github/workflows/: architecture-guardrails.yml
artifacts/: _tmp_check_db.py  _tmp_migrate_run.py  monsters_imported.txt  narrative_quality_report.json  phase25_cli_playtest_capture.py  phase25_cli_playtest_notes.md  phase25_cli_playtest_report.json
data/languages/: dragonborn.json  dwarf.json  elf.json  halfelf.json  halfling.json  halforc.json  human.json  orc.json  tiefling.json
data/name_generation/: aarakocra_female.txt  bugbear_male.txt  darkelf_male.txt  dragonborn_male.txt  dwarf_female.txt  elf_male.txt  (+11 more)
docs/: application_contract_v1.md  contributor_runbook.md  game_features_and_functions_reference.md  narrative_simulation_batch.md  release_checklist_v1.md  repository_parity_matrix.md
reference_/: Pres Biomes 2026-02-26-22-57.csv  Pres Burgs 2026-02-26-22-57.csv  Pres Markers 2026-02-26-22-59.csv  Pres Military 2026-02-26-22-59.csv  Pres Provinces 2026-02-26-23-00.csv  Pres Relations 2026-02-26-22-58.csv  Pres Religions 2026-02-26-23-01.csv  Pres Rivers 2026-02-26-23-01.csv  Pres Routes 2026-02-26-23-01.csv  Pres States 2026-02-26-23-01.csv
tests/: conftest.py  test_game_logic.py  test_inmemory_repositories.py  test_mysql_repositories.py
(+296 files in other folders)
